--- a/html/21_skillsharing.html
+++ b/html/21_skillsharing.html
@@ -36,7 +36,7 @@
 
 <p><a class="p_ident" id="p-oateJBFpXz" href="#p-oateJBFpXz" tabindex="-1" role="presentation"></a>La aplicación se configurará para mostrar una vista <em>en vivo</em> de las charlas propuestas actuales y sus comentarios. Cada vez que alguien, en algún lugar, envíe una nueva charla o agregue un comentario, todas las personas que tengan la página abierta en sus navegadores deberían ver el cambio de inmediato. Esto plantea un desafío—no hay forma de que un servidor web abra una conexión a un cliente, ni hay una buena forma de saber qué clientes están viendo actualmente un sitio web dado.</p>
 
-<p><a class="p_ident" id="p-hgeOsffqux" href="#p-hgeOsffqux" tabindex="-1" role="presentation"></a>{{index “Node.js”}}Una solución común a este problema se llama <em>long polling</em>, que resulta ser una de las motivaciones del diseño de Node.</p>
+<p><a class="p_ident" id="p-UaD3BZk280" href="#p-UaD3BZk280" tabindex="-1" role="presentation"></a>Una solución común a este problema se llama <em>long polling</em>, que resulta ser una de las motivaciones del diseño de Node.</p>
 
 <h2><a class="h_ident" id="h-Yxu7U155Cs" href="#h-Yxu7U155Cs" tabindex="-1" role="presentation"></a>Long polling</h2>
 
