--- a/html/05_higher_order.html
+++ b/html/05_higher_order.html
@@ -185,7 +185,7 @@ repetir(<span class="tok-number">3</span>, <span class="tok-definition">n</span>
 console.log(filter(SCRIPTS, <span class="tok-definition">script</span> =&gt; script.living));
 <span class="tok-comment">// → [{name: &quot;Adlam&quot;, …}, …]</span></pre>
 
-<p><a class="p_ident" id="p-TR3HO2AiQA" href="#p-TR3HO2AiQA" tabindex="-1" role="presentation"></a>{{index [función, “como valor”], [función, aplicación]}}</p>
+<p><a class="p_ident" id="p-TR3HO2AiQA" href="#p-TR3HO2AiQA" tabindex="-1" role="presentation"></a>{{index [“función”, “como valor”], [“función”, aplicación]}}</p>
 
 <p><a class="p_ident" id="p-vqNV3Gw5Wz" href="#p-vqNV3Gw5Wz" tabindex="-1" role="presentation"></a>La función utiliza el argumento llamado <code>test</code>, un valor de función, para llenar un “vacío” en la computación, el proceso de decidir qué elementos recopilar.</p>
 
@@ -199,8 +199,6 @@ console.log(filter(SCRIPTS, <span class="tok-definition">script</span> =&gt; scr
 <h2 id="map"><a class="h_ident" id="h-S3rmMrmWka" href="#h-S3rmMrmWka" tabindex="-1" role="presentation"></a>Transformación con map</h2>
 
 <p><a class="p_ident" id="p-ydEMpih2aw" href="#p-ydEMpih2aw" tabindex="-1" role="presentation"></a>Digamos que tenemos una matriz de objetos que representan guiones, producida al filtrar la matriz <code>SCRIPTS</code> de alguna manera. Queremos una matriz de nombres en su lugar, que es más fácil de inspeccionar.</p>
-
-<p><a class="p_ident" id="p-6qG4TTJ3N8" href="#p-6qG4TTJ3N8" tabindex="-1" role="presentation"></a>{{index [función, “de orden superior”]}}</p>
 
 <p><a class="p_ident" id="p-eEu8IlZwFm" href="#p-eEu8IlZwFm" tabindex="-1" role="presentation"></a>El método <code>map</code> transforma una matriz aplicando una función a todos sus elementos y construyendo una nueva matriz a partir de los valores devueltos. La nueva matriz tendrá la misma longitud que la matriz de entrada, pero su contenido habrá sido <em>mapeado</em> a una nueva forma por la función:</p>
 
@@ -222,7 +220,7 @@ console.log(map(rtlScripts, <span class="tok-definition">s</span> =&gt; s.name))
 
 <p><a class="p_ident" id="p-0sSdjIXjkE" href="#p-0sSdjIXjkE" tabindex="-1" role="presentation"></a>Otra cosa común que hacer con matrices es calcular un único valor a partir de ellas. Nuestro ejemplo recurrente, sumar una colección de números, es una instancia de esto. Otro ejemplo es encontrar el guion con más caracteres.</p>
 
-<p><a class="p_ident" id="p-saI2d9pHc9" href="#p-saI2d9pHc9" tabindex="-1" role="presentation"></a>{{index [función, “de orden superior”], “método de reducción”}}La operación de orden superior que representa este patrón se llama <em>reduce</em> (a veces también llamada <em>fold</em>). Construye un valor tomando repetidamente un único elemento del array y combinándolo con el valor actual. Al sumar números, comenzarías con el número cero y, para cada elemento, lo sumarías al total.</p>
+<p><a class="p_ident" id="p-saI2d9pHc9" href="#p-saI2d9pHc9" tabindex="-1" role="presentation"></a>{{index [“función”, “de orden superior”], “método de reducción”}}La operación de orden superior que representa este patrón se llama <em>reduce</em> (a veces también llamada <em>fold</em>). Construye un valor tomando repetidamente un único elemento del array y combinándolo con el valor actual. Al sumar números, comenzarías con el número cero y, para cada elemento, lo sumarías al total.</p>
 
 <p><a class="p_ident" id="p-2kupqkikqu" href="#p-2kupqkikqu" tabindex="-1" role="presentation"></a>Los parámetros de <code>reduce</code> son, además del array, una función de combinación y un valor inicial. Esta función es un poco menos directa que <code>filter</code> y <code>map</code>, así que obsérvala detenidamente:</p>
 
@@ -277,7 +275,7 @@ console.log(biggest);
 
 <p><a class="p_ident" id="p-EtVmv7i/iI" href="#p-EtVmv7i/iI" tabindex="-1" role="presentation"></a>Hay algunas variables adicionales y el programa tiene cuatro líneas más, pero sigue siendo muy legible.</p>
 
-<p><a class="p_ident" id="p-5fJ9IZD2F1" href="#p-5fJ9IZD2F1" tabindex="-1" role="presentation"></a>{{index “función promedio”, composabilidad, [función, “de orden superior”], “método filter”, “método map”, “método reduce”}}{{id average_function}}</p>
+<p><a class="p_ident" id="p-5fJ9IZD2F1" href="#p-5fJ9IZD2F1" tabindex="-1" role="presentation"></a>{{index “función promedio”, composabilidad, [“función”, “de orden superior”], “método filter”, “método map”, “método reduce”}}{{id average_function}}</p>
 
 <p><a class="p_ident" id="p-/CzAZCG1Ww" href="#p-/CzAZCG1Ww" tabindex="-1" role="presentation"></a>Las abstracciones proporcionadas por estas funciones brillan realmente cuando necesitas <em>componer</em> operaciones. Como ejemplo, escribamos un código que encuentre el año promedio de origen para scripts vivos y muertos en el conjunto de datos:</p>
 
